class RoomsController < ApplicationController
  def index
  end

  def show
  end

  def create
  end

  def new
  end

  def destroy
  end
end
